force-app/main/default/objects/UPP_User_Permission__c/UPP_User_Permission__c.object-meta.xml
<CustomObject>
    <label>UPP User Permission</label>
    <nameField>
        <displayFormat>PERM--{000000000}</displayFormat>
        <label>UPP User Permission Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>UPP User Permissions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>