force-app/main/default/objects/UPP_User_Permission__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Location</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>UPP User Permissions</relationshipLabel>
    <relationshipName>UPP_User_Permissions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>