force-app/main/default/objects/UPP_User_Permission__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>UPP User Permissions</relationshipLabel>
    <relationshipName>UPP_User_Permissions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>