force-app/main/default/objects/UPP_User_Permission__c/fields/Inactive_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Inactive_Timestamp__c</fullName>
    <label>Inactive Timestamp</label>
    <type>DateTime</type>
</CustomField>