force-app/main/default/objects/UPP_User_Permission__c/fields/Permission_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Permission_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Permission Enabled</label>
    <type>Checkbox</type>
</CustomField>