force-app/main/default/objects/UPP_User_Permission__c/fields/Permission_Set_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>Permission_Set_Api_Name__c</fullName>
    <label>UPP Program Permission Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>