force-app/main/default/objects/UPP_User_Permission__c/fields/UPP_Permission_Key__c.field-meta.xml
<CustomField>
    <fullName>UPP_Permission_Key__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Concatenation (Account__r.Id + Contact__r.Id + UPP_Program_Permission__r.Id)</description>
    <externalId>true</externalId>
    <inlineHelpText>Concatenation (Account__r.Id + Contact__r.Id + UPP_Program_Permission__r.Id)</inlineHelpText>
    <label>UPP Permission Key</label>
    <length>54</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>