force-app/main/default/objects/UPP_User_Permission__c/fields/UPP_Program_Permission_Id__c.field-meta.xml
<CustomField>
    <fullName>UPP_Program_Permission_Id__c</fullName>
    <label>UPP Program Permission Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>