force-app/main/default/objects/UPP_User_Permission__c/fields/UPP_ProgramName__c.field-meta.xml
<CustomField>
    <fullName>UPP_ProgramName__c</fullName>
    <label>Program Name</label>
    <type>TextArea</type>
</CustomField>