force-app/main/default/objects/UPP_User_Permission__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>UPP_Permission_Key__c</columns>
    <columns>UPP_Program_Permission_Id__c</columns>
    <columns>Permission_Set_Api_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>