force-app/main/default/objects/UPP_User_Permission__c/listViews/AS.listView-meta.xml
<ListView>
    <fullName>AS</fullName>
    <columns>NAME</columns>
    <columns>Inactive_Timestamp__c</columns>
    <columns>Account__c</columns>
    <columns>UPP_Permission_Key__c</columns>
    <columns>UPP_Program_Permission_Id__c</columns>
    <columns>Permission_Enabled__c</columns>
    <columns>Contact__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>AS</label>
</ListView>